--- a/Main.html
+++ b/Main.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="icons">
-                    <div class="js-underline-icon" title="Shipping info">
+                    <div class="underline-icon" title="Shipping info">
                         <i class="fa fa-truck js-select-icon" id="truck-icon" aria-hidden="true" onclick="iconClick(this,'man-icon')"></i>
                     </div>
                     <div title="Processor">
@@ -121,10 +121,10 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th>Product <img src="icons\sort.png " alt=" " class="button-sort" onclick="getSort(event)"></th>
-                                    <th>Unit Price <img src="icons\sort.png " alt=" " class="button-sort" onclick="getSort(event)"></th>
-                                    <th>Quantify <img src="icons\sort.png " alt=" " class="button-sort" onclick="getSort(event)"></th>
-                                    <th>Total <img src="icons\sort.png " alt=" " class="button-sort" onclick="getSort(event)"></th>
+                                    <th>Product <img src="icons\sort.png " alt="" class="button-sort" onclick="getSort(event)"></th>
+                                    <th>Unit Price <img src="icons\sort.png " alt="" class="button-sort" onclick="getSort(event)"></th>
+                                    <th>Quantify <img src="icons\sort.png " alt="" class="button-sort" onclick="getSort(event)"></th>
+                                    <th>Total <img src="icons\sort.png " alt="" class="button-sort" onclick="getSort(event)"></th>
                                 </tr>
                             </thead>
                             <tbody class="products-info ">
